Fixed z-index issues and import

--- a/src/index.css
+++ b/src/index.css
@@ -97,7 +97,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 0; /* Place it below the pop-up */
+    z-index: 99; /* Place it below the pop-up */
     cursor: pointer
   }
 
